--- a/scss/base/_typograpgy.scss
+++ b/scss/base/_typograpgy.scss
@@ -7,7 +7,6 @@
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  /*font-size: 16px;*/
   line-height: 1.7;
   color: $color-grey-dark;
 }
@@ -23,9 +22,9 @@ body {
     font-size: 6rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
+    // animation-name: moveInLeft;
+    // animation-duration: 1s;
+    // animation-timing-function: ease-out;
 
     @include respond(phone) {
       letter-spacing: 1rem;
@@ -38,7 +37,7 @@ body {
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 17.1.75rem;
-    animation: moveInRight 1s ease-out;
+    // animation: moveInRight 1s ease-out;
 
     @include respond(phone) {
       letter-spacing: 0.5rem;
