--- a/scss/components/_facts.scss
+++ b/scss/components/_facts.scss
@@ -3,39 +3,61 @@
   list-style: none;
   margin: 5.5rem;
 
+  @include respond(phone) {
+    margin: 0;
+  }
+
   .fact {
     display: flex;
     flex-direction: column;
     cursor: pointer;
 
-    & .r::before {
-      background: $color-primary;
+    & .r {
+      &::first-letter {
+        color: $color-primary;
+        font-size: 5.7rem;
+      }
+
+      &::before {
+        background: $color-primary;
+      }
     }
 
-    & .y::before {
-      background: rgb(228, 206, 7);
+    & .y {
+      &::first-letter {
+        color: rgb(228, 206, 7);
+        font-size: 5.7rem;
+      }
+
+      &::before {
+        background: rgb(228, 206, 7);
+      }
     }
 
-    & .g::before {
-      background: rgb(9, 146, 78);
+    & .g {
+      &::first-letter {
+        color: rgb(9, 146, 78);
+        font-size: 5.7rem;
+      }
+
+      &::before {
+        background: rgb(9, 146, 78);
+      }
     }
 
     &__title {
       position: relative;
       transition: color 0.8s;
-      font-size: xxx-large;
+      font-size: 4.8rem;
       padding-left: 3rem;
+      margin-bottom: 0.5rem;
 
       @include respond(tab-port) {
         font-size: 4rem;
       }
 
-      &:not(:last-child) {
-        margin-bottom: 0.5rem;
-
-        @include respond(tab-port) {
-          margin-bottom: 0;
-        }
+      @include respond(phone) {
+        font-size: 2rem;
       }
 
       @include respond(tab-port) {
@@ -57,6 +79,10 @@
 
       &:hover {
         color: $color-white;
+
+        &::first-letter{
+          color: $color-white;
+        }
       }
 
       &:hover::before {
