--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -27,6 +27,20 @@
       background-size: cover;
     }
 
+    @include respond(tab-port) {
+      background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.7) 0%,
+        rgba($color-white, 0.7) 50%,
+        
+      ),
+      url(../imgs/saludo.jpg);
+    }
+
+    @include respond(phone) {
+      margin: 0 3rem;
+    }
+
     &__form {
       width: 50%;
       padding: 6rem;
@@ -46,14 +60,13 @@
       }
 
       &__input {
-        font-size: 1.5rem;
+        font-size: $default-font-size;
         font-family: inherit;
-        color: inherit;
+        color: $color-grey-dark-3;
         padding: 1.5rem 2rem;
         border-radius: 2px;
         background-color: rgba(rgb(216, 148, 0), 0.1);
         border: 1px solid;
-        // border-bottom: 3px solid transparent;
         display: block;
         width: 90%;
         transition: all 0.3s;
@@ -61,6 +74,8 @@
         @include respond(tab-port) {
           width: 100%;
         }
+
+        
 
         &:focus {
           outline: none;
@@ -90,6 +105,10 @@
         opacity: 0;
         visibility: hidden;
         transform: translateY(-4rem);
+      }
+
+      textarea::placeholder{
+        color: #666;
       }
     }
   }
