--- a/css/style.css
+++ b/css/style.css
@@ -253,10 +253,6 @@ header h1 {
   cursor: pointer; }
   @media only screen and (max-width: 56.25em) {
     .navigation__button {
-      top: 4rem;
-      right: 4rem; } }
-  @media only screen and (max-width: 56.25em) {
-    .navigation__button {
       top: 3.5rem;
       right: 3.5rem; } }
 
@@ -270,10 +266,6 @@ header h1 {
   background-image: radial-gradient(#1084f0, #0750af);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
-  @media only screen and (max-width: 56.25em) {
-    .navigation__background {
-      top: 4.5rem;
-      right: 4.5rem; } }
   @media only screen and (max-width: 56.25em) {
     .navigation__background {
       top: 4rem;
@@ -316,6 +308,9 @@ header h1 {
   .navigation__link:link span, .navigation__link:visited span {
     margin-right: 1.5rem;
     display: inline-block; }
+  @media only screen and (max-width: 37.5em) {
+    .navigation__link:link, .navigation__link:visited {
+      font-size: 1.8rem; } }
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
