--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -28,6 +28,10 @@ footer {
       position: relative;
       border-radius: 8px;
 
+      @include respond(big-desktop) {
+        width: 50%;
+      }
+
       @include respond(tab-land) {
         width: 80%;
       }
