--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,16 @@ body {
   background-color: #B82036;
   color: #fff; }
 
+::-webkit-scrollbar {
+  width: 2rem; }
+
+::-webkit-scrollbar-track {
+  background: #eee; }
+
+::-webkit-scrollbar-thumb {
+  background: #B82036;
+  border-radius: 10px; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
@@ -187,7 +197,8 @@ header .parallax {
     left: 0;
     object-fit: cover;
     pointer-events: none;
-    transition: all 0.2s; }
+    transition: all 0.2s;
+    width: 100%; }
     header .parallax picture img {
       width: 100%;
       height: 100vh; }
@@ -214,7 +225,8 @@ header .parallax {
       transform: translate(-50%, -50%);
       animation-name: fadeIn;
       animation-duration: 2s;
-      animation-timing-function: ease-in; }
+      animation-timing-function: ease-in;
+      width: auto; }
       header .parallax picture.logo img {
         height: 100%; }
     header .parallax picture.main {
@@ -860,33 +872,33 @@ footer .modal-bg {
         width: 95%; } }
     footer .modal-bg .modal picture img {
       width: 100%; }
-  footer .modal-bg .modal-close {
-    color: #B82036;
-    position: absolute;
-    top: 3rem;
-    right: 30rem;
-    padding: 0 2rem;
-    font-weight: bold;
-    font-size: xxx-large;
-    background-color: #0862d785;
-    border-radius: 50%;
-    cursor: pointer; }
-    @media only screen and (max-width: 75em) {
-      footer .modal-bg .modal-close {
-        top: 19rem;
-        right: 4rem;
-        font-size: xx-large; } }
-    @media only screen and (max-width: 56.25em) {
-      footer .modal-bg .modal-close {
-        top: 19rem;
-        right: 4rem;
-        font-size: xx-large; } }
-    @media only screen and (max-width: 37.5em) {
-      footer .modal-bg .modal-close {
-        font-size: large;
-        top: 15rem;
-        right: 1rem;
-        padding: 0 1rem; } }
+    footer .modal-bg .modal-close {
+      color: #B82036;
+      position: absolute;
+      top: 3rem;
+      right: 30rem;
+      padding: 0 2rem;
+      font-weight: bold;
+      font-size: xxx-large;
+      background-color: #0862d785;
+      border-radius: 50%;
+      cursor: pointer; }
+      @media only screen and (max-width: 75em) {
+        footer .modal-bg .modal-close {
+          top: 19rem;
+          right: 4rem;
+          font-size: xx-large; } }
+      @media only screen and (max-width: 56.25em) {
+        footer .modal-bg .modal-close {
+          top: 19rem;
+          right: 4rem;
+          font-size: xx-large; } }
+      @media only screen and (max-width: 37.5em) {
+        footer .modal-bg .modal-close {
+          font-size: large;
+          top: 15rem;
+          right: 1rem;
+          padding: 0 1rem; } }
 
 .section-form {
   padding: 15rem 0;
