--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -28,7 +28,7 @@ header {
       object-fit: cover;
       pointer-events: none;
       transition: all 0.2s;
-
+      width: 100%;
       img {
         width: 100%;
         height: 100vh;
@@ -65,7 +65,7 @@ header {
         animation-name: fadeIn;
         animation-duration: 2s;
         animation-timing-function: ease-in;
-
+        width: auto;
         img {
           height: 100%;
         }
